[package]
name = "rem-controller"
version = "0.1.2"
edition = "2021"
authors = ["Sewen Thy <me@sewenthy.dev>", "Matt Britton <matt.britton@anu.edu.au>"]
license = "MIT"
description = "Non-local control flow repairer for Rusty Extraction Maestro"
repository = "https://github.com/RuleBrittonica/rem-controller" # Forked from: "https://github.com/verse-lab/rustic-cat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
convert_case = "0.6.0"
clap = { version = "4.0.20", features = [ "derive" ] }
syn = {version="1.0.86", features=["printing", "parsing", "full", "visit-mut", "visit"]}
proc-macro2 = { version = "1.0", features = ["span-locations"]}
quote = "1.0"
env_logger = "0.11.5"
log = "0.4.17"
rem-utils = { git = "https://github.com/RuleBrittonica/rem-utils", branch = "master"}
